--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 					<h4>Skills</h4>
 
-					<p>Fullstack developer with primary focus on Web Development and Python + Django: <a target="_blank" href="resume.pdf">Download Resume</a></p>
+					<p>Fullstack developer with primary focus on Web Development and Python + Django: <a target="_blank" href="sujit CV.pdf">Download Resume</a></p>
 
 					<div id="skills">
 						<ul>
@@ -115,7 +115,7 @@
 				
 				<div class="social-links">
 					<img id="social_img" src="images/follow.png">
-					<h3>Find me on Twitter & Youtube</h3>
+					<h3>Find me on Github and Linkedin</h3>
 
 					<a target="_blank" class="fa fa-github" href="https://github.com/Hona-08">: @Hona-08</a>
 					<br>
