--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
 
 					<p>I build new projects as a test to my skills.</p>
 
-					<p>While I keep my programming skills aside i love drawing and love to play football.
+					<p>While I keep my programming skills aside I love Arts and Football.
 
 					<hr>
 
 					<h4>Skills</h4>
 
-					<p>Fullstack developer with primary focus on Web Development and Python + Django: <a target="_blank" href="sujitcv.pdf">Download Resume</a></p>
+					<p>Fullstack developer with primary focus on Web Development and Python: <a target="_blank" href="sujitcv.pdf">Download Resume</a></p>
 
 					<div id="skills">
 						<ul>
@@ -101,10 +101,10 @@
 						</ul>
 
 						<ul>
-							<li>Google Maps API</li>
-							<li>JS Charts</li>
-							<li>AWS (RDS/S3)</li>
-							<li>Heroku</li>
+							<li>Rest API</li>
+							<li>Git</li>
+							<li>SQL</li>
+							<li>Bootstrap</li>
 							<li>HTML/CSS</li>
 						</ul>
 
@@ -114,7 +114,7 @@
 
 				
 				<div class="social-links">
-					<img id="social_img" src="images/follow.png">
+					<img id="social_img" src="images/follow.png" alt="This picture is from the early days of my Learn, will upload new soon">
 					<h3>Find me on Github and Linkedin</h3>
 
 					<a target="_blank" class="fa fa-github" href="https://github.com/Hona-08">: @Hona-08</a>
@@ -125,7 +125,7 @@
 
 		</div>
 	</section>
-
+<!--
 	<section class="s1">
 		<div class="main-container">
 			<h3 style="text-align: center;">Some of my past projects</h3>
@@ -168,7 +168,7 @@
 			</div>
 		</div>
 	</section>
-
+-->
 	<section class="s2">
 		<div class="main-container">
 			<a href=""></a>
