--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 					<h4>Skills</h4>
 
-					<p>Fullstack developer with primary focus on Web Development and Python: <a target="_blank" href="sujitcv.pdf">Download Resume</a></p>
+					<p>Fullstack developer: <a target="_blank" href="sujitcv.pdf">Download Resume</a></p>
 
 					<div id="skills">
 						<ul>
