Adding blog to portfolio

--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -10,7 +10,7 @@
 
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
 
-	<link rel="stylesheet" type="text/css" href="default.css">
+	<link rel="stylesheet" type="text/css" href="../default.css">
 
 
 	<style type="text/css">
@@ -47,7 +47,7 @@
 		<br>
 
 		<div class="img-container">
-			<img src="images/home.png">
+			<img src="../images/home.png">
 		</div>
 		
 		<h3>Game Store</h3>
@@ -74,27 +74,27 @@
 
 		<h5>Game Store Admin Panel</h5>
 		<div class="img-container">
-			<img src="images/admin.png">
+			<img src="../images/admin.png">
 		</div>
 
 		<h6>Sample Cart System</h5>
 		<div class="img-container">
-			<img src="images/cart.png">
+			<img src="../images/cart.png">
 		</div>
 
 		<h5>Blogs</h5>
 		<div class="img-container">
-			<img src="images/blog.png">
+			<img src="../images/blog.png">
 		</div>
 
 		<h5>All Games</h5>
 		<div class="img-container">
-			<img src="images/all.png">
+			<img src="../images/all.png">
 		</div>
 
 		<h5>Customer Dashboard</h5>
 		<div class="img-container">
-			<img src="images/customer-dash.png">
+			<img src="../images/customer-dash.png">
 		</div>
 
 	</div>
