--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				</div>
 
 				<div class="left-column">
-					<img id="profile_pic" src="images/pic1.jpg">
+					<img id="profile_pic" src="images/my pic.jpg">
 					<h5 style="text-align: center;line-height: 0;">Personalize Theme</h5>
 
 					<div id="theme-options-wrapper">
