--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -38,7 +38,9 @@
 		</a>
 
 		<ul id="navigation">
-			<li><a href="index.html#contact">Contact</a></li>
+			<!-- <li><a href="blogs/blogs.html">Blogs</a></li> -->
+			<li><a href="../index.html">Portfolio</a></li>
+			<li><a href="../index.html#contact">Contact</a></li>
 
 		</ul>
 	</div>
