Change in style

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				</div>
 
 				<div class="left-column">
-					<img id="profile_pic" src="images/.jpg" >
+					<img id="profile_pic" src="images/my pic.jpg" >
 					<h5 style="text-align: center;line-height: 0;">Personalize Theme</h5>
 
 					<div id="theme-options-wrapper">
@@ -212,9 +212,9 @@
 				<!-- <img id="social_img" src="images/follow.png" alt="This picture is from the early days of my Learn, will upload new soon"> -->
 				<h6>Find me on Github and Linkedin</h6>
 
-				<a target="_blank" class="fa fa-github" href="https://github.com/Hona-08">: .</a>
+				<a target="_blank" class="fa fa-github" href="https://github.com/Hona-08">: @Hona-08</a>
 				<br>
-				<a target="_blank"  class="fa fa-linkedin" href="https://www.linkedin.com/in/sujithona/">: .</a>
+				<a target="_blank"  class="fa fa-linkedin" href="https://www.linkedin.com/in/sujithona/">: @sujithona</a>
 			</div><br>
 
 			<h3 style="text-align: center;">Leave a message</h3>
