--- a/index.html
+++ b/index.html
@@ -210,14 +210,14 @@
 			<h3 style="text-align: center;">Lets Connect!</h3>
 			<div class="social-links">
 				<!-- <img id="social_img" src="images/follow.png" alt="This picture is from the early days of my Learn, will upload new soon"> -->
-				<h6>Find me on Github and Linkedin</h6>
+				<!-- <h5>Find me on Github and Linkedin</h5> -->
 
-				<a target="_blank" class="fa fa-github" href="https://github.com/Hona-08">: @Hona-08</a>
-				<br>
-				<a target="_blank"  class="fa fa-linkedin" href="https://www.linkedin.com/in/sujithona/">: @sujithona</a>
+				<a target="_blank" class="fa fa-github" href="https://github.com/Hona-08"></a>
+				
+				<a target="_blank"  class="fa fa-linkedin" href="https://www.linkedin.com/in/sujithona/"></a>
 			</div><br>
 
-			<h3 style="text-align: center;">Leave a message</h3>
+			<h3 style="text-align: center;">Leave a Message</h3>
 			<form id="contact-form" action="https://formspree.io/f/mzbyajvn" method="POST">
 				<a name="contact"></a>
 			
